--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "description": "Javascript class project 2",
   "main": "index.js",
+  "repository": "https://github.com/GabyRive/node-project-2.git",
   "scripts": {
     "test": "mocha"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "csv": "^1.1.0"
+    "csv": "^1.1.0",
+    "prompt-sync": "^4.1.4"
   },
   "devDependencies": {
     "chai": "^3.5.0",
